코멘트 생성, 조회 관련 api 문서 수정 및 예외 처리
